<resources>
    <string name="app_name">Final Project</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="distance_title">Distance (kilometers)</string>
    <string name="ave_speed_title">Avg. speed (km/h)</string>
    <string name="top_speed_title">Top speed (km/h)</string>
    <string name="start_training">Start training</string>
    <string name="default_data_value">0.0</string>
    <string name="display_data">Speed and Time</string>
    <string name="display_map">Tracking location</string>
    <string name="today_data">Today\'s stats</string>
    <string name="speed_title">Speed (m/s)</string>
    <string name="time_title">Time</string>
    <string name="finish_btn">Finish</string>
    <string name="back_to_main_btn">Back to Home</string>

</resources>