<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="284dp" />

    <LinearLayout
        android:id="@+id/data_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/travelDistanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_data_value"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/ave_speed_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/averageSpeedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_data_value"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordVelocity_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/top_speed_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/highestSpeedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_data_value"
            android:textSize="20sp" />

    </LinearLayout>
    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/color_start_Btn"
        android:text="@string/start_training"
        />

    </LinearLayout>